<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RiderActivity" >

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/settings_and_destination_search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/user_icon"
                android:layout_width="53dp"
                android:layout_height="48dp"
                android:background="@mipmap/user"
                android:gravity="center"
                android:layout_marginTop="15sp"
                android:layout_marginStart="10sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="10sp"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp">

                <fragment
                    android:id="@+id/place_autocomplete_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/filters"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/all_rides_filter"
                android:background="@drawable/filtered_on"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:padding="5dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="7dp"
                android:scaleType="fitXY"
                android:text="All" />

            <Button
                android:id="@+id/uber_rides_filter"
                android:background="@drawable/filtered_off"
                android:textColor="@color/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:padding="5dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="7dp"
                android:scaleType="fitXY"
                android:text="Uber" />

            <Button
                android:id="@+id/lyft_rides_filter"
                android:background="@drawable/filtered_off"
                android:textColor="@color/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:padding="5dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="7dp"
                android:scaleType="fitXY"
                android:text="Lyft" />

            <Button
                android:id="@+id/bird_rides_filter"
                android:background="@drawable/filtered_off"
                android:textColor="@color/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:padding="5dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="7dp"
                android:scaleType="fitXY"
                android:text="Bird" />

            <Button
                android:id="@+id/lime_rides_filter"
                android:background="@drawable/filtered_off"
                android:textColor="@color/textSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:padding="5dp"
                android:layout_marginVertical="15dp"
                android:layout_marginHorizontal="7dp"
                android:scaleType="fitXY"
                android:text="Lime" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary" >

            <LinearLayout
                android:id="@+id/ride_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-18dp"
                    android:textColor="@color/textPrimary"
                    android:textSize="50dp"
                    android:text="←"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="-18dp"
                    android:textColor="@color/textPrimary"
                    android:textSize="20dp"
                    android:text="Ride Options"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/open_lime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginVertical="22dp"
        android:text="  Open Lime App  "
        android:background="@drawable/filtered_off"
        android:textColor="@color/textPrimary"
        android:visibility="gone" />

    <Button
        android:id="@+id/open_bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginVertical="22dp"
        android:text="  Open Bird App  "
        android:background="@drawable/filtered_off"
        android:textColor="@color/textPrimary"
        android:visibility="gone" />

    <Button
        android:id="@+id/find_rides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginVertical="22dp"
        android:text="Find Rides"
        android:background="@drawable/filtered_off"
        android:textColor="@color/textPrimary" />

    <ProgressBar
        android:id="@+id/find_rides_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="3dp"
        android:visibility="gone" />

    <View
        android:id="@+id/dim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cc000000"
        android:elevation="2dp"
        android:visibility="gone" />

</RelativeLayout>
